# rust-playground

./: .gitignore  Cargo.toml
.github/workflows/: to-do.yml
blob-store/: Cargo.toml
blob-store/src/: error.rs  in_memory.rs  lib.rs  store.rs
blob-store/src/in_memory/: bucket.rs  object.rs  store.rs
core-utils/: Cargo.toml
file-browser/: Cargo.toml
file-browser/src/: app.rs  main.rs  view.rs
signal-handling/: Cargo.toml
store/: Cargo.toml
store/src/: main.rs
to-do/: Cargo.toml
to-do/src/: app.rs  error.rs  main.rs  task.rs
web-crawler/: Cargo.toml
web-crawler/src/: client.rs  html.rs  lib.rs  main.rs  result.rs  task.rs  url_scheme.rs
web-crawler/src/asynchronous/: crawler.rs
web-crawler/src/multi_thread/: crawler.rs
web-crawler/src/synchronous/: crawler.rs
